CCA: Prevent toasts from overlaying wrong views
Previously, we always appended custom effect elements to `document.body`
so the toast of PTZ feature would potentially cover the settings view.

This CL Adds `parent` parameter to customize the parent to append the
custom effect elements to. This CL also removes the obsolete focus ring
CSS which should be removed in CL:3666398.

Bug: b:261386379
Test: Trigger PTZ toast and open settings view.
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4099447
Commit-Queue: Chu-Hsuan Yang <chuhsuan@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1082947}

--- a/ash/webui/camera_app_ui/resources/css/custom_toast.css
+++ b/ash/webui/camera_app_ui/resources/css/custom_toast.css
@@ -92,7 +92,7 @@
   border-radius: 18px;
   display: flex;
   padding: 8px 16px 8px 16px;
-  position: absolute;
+  position: fixed;
   white-space: nowrap;
 }
 
@@ -133,19 +133,6 @@
   width: var(--dot-size);
 }
 
-body.keyboard-navigation .custom-toast:focus::after {
-  --focus-ring-size: 5px;
-
-  border: 2px solid var(--focus-color);
-  border-radius: 24px;
-  bottom: calc(-1 * var(--focus-ring-size));
-  content: '';
-  left: calc(-1 * var(--focus-ring-size));
-  position: absolute;
-  right: calc(-1 * var(--focus-ring-size));
-  top: calc(-1 * var(--focus-ring-size));
-}
-
 @keyframes ripple-scale {
   0% {
     transform: scale(0);
@@ -173,7 +160,7 @@ body.keyboard-navigation .custom-toast:focus::after {
   border-radius: var(--border-radius-rounded-with-short-side);
   opacity: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   transform-origin: center;
 }
 
